--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "shadcn-ui": "^1.0.0",
+    "@shadcn/ui": "latest"
     "tailwindcss": "^3.4.0",
     "lucide-react": "^0.286.0",
     "axios": "^1.6.0",
