--- a/package.json
+++ b/package.json
@@ -1,26 +1,14 @@
 {
   "name": "9rock-website",
   "version": "1.0.0",
-  "description": "Jewelry ecommerce website for 9rock",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@shadcn/ui": "latest"
-    "tailwindcss": "^3.4.0",
-    "lucide-react": "^0.286.0",
-    "axios": "^1.6.0",
-    "qrcode": "^1.5.1"
-  },
-  "devDependencies": {
-    "eslint": "8.55.0",
-    "eslint-config-next": "14.0.0"
-  },
-  "license": "MIT"
+    "next": "13.4.19",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  }
 }
